@@ -47,7 +47,7 @@ name|hadoop
 operator|.
 name|conf
 operator|.
-name|Configuration
+name|Configured
 import|;
 end_import
 
@@ -76,22 +76,6 @@ operator|.
 name|hbase
 operator|.
 name|HBaseConfiguration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|io
-operator|.
-name|HbaseMapWritable
 import|;
 end_import
 
@@ -151,22 +135,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|hbase
-operator|.
-name|util
-operator|.
-name|Bytes
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|mapred
 operator|.
 name|FileOutputFormat
@@ -198,20 +166,6 @@ operator|.
 name|mapred
 operator|.
 name|JobConf
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|mapred
-operator|.
-name|MapReduceBase
 import|;
 end_import
 
@@ -296,18 +250,11 @@ specifier|public
 class|class
 name|RowCounter
 extends|extends
-name|MapReduceBase
+name|Configured
 implements|implements
-name|TableMap
-argument_list|<
-name|ImmutableBytesWritable
-argument_list|,
-name|RowResult
-argument_list|>
-implements|,
 name|Tool
 block|{
-comment|/* Name of this 'program'    */
+comment|// Name of this 'program'
 specifier|static
 specifier|final
 name|String
@@ -315,36 +262,17 @@ name|NAME
 init|=
 literal|"rowcounter"
 decl_stmt|;
-specifier|private
-name|Configuration
-name|conf
-decl_stmt|;
-specifier|private
-specifier|final
-name|RowResult
-name|EMPTY_RESULT_VALUE
-init|=
-operator|new
-name|RowResult
-argument_list|(
-name|Bytes
-operator|.
-name|toBytes
-argument_list|(
-literal|"dummy"
-argument_list|)
-argument_list|,
-operator|new
-name|HbaseMapWritable
+specifier|static
+class|class
+name|RowCounterMapper
+implements|implements
+name|TableMap
 argument_list|<
-name|byte
-index|[]
+name|ImmutableBytesWritable
 argument_list|,
-name|Cell
+name|RowResult
 argument_list|>
-argument_list|()
-argument_list|)
-decl_stmt|;
+block|{
 specifier|private
 specifier|static
 enum|enum
@@ -437,6 +365,7 @@ operator|!
 name|content
 condition|)
 block|{
+comment|// Don't count rows that are all empty values.
 return|return;
 block|}
 comment|// Give out same value every time.  We're only interested in the row/key
@@ -451,15 +380,26 @@ argument_list|,
 literal|1
 argument_list|)
 expr_stmt|;
-name|output
-operator|.
-name|collect
-argument_list|(
-name|row
-argument_list|,
-name|EMPTY_RESULT_VALUE
-argument_list|)
-expr_stmt|;
+block|}
+specifier|public
+name|void
+name|configure
+parameter_list|(
+name|JobConf
+name|jc
+parameter_list|)
+block|{
+comment|// Nothing to do.
+block|}
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+comment|// Nothing to do.
+block|}
 block|}
 comment|/**    * @param args    * @return the JobConf    * @throws IOException    */
 specifier|public
@@ -482,9 +422,8 @@ argument_list|(
 name|getConf
 argument_list|()
 argument_list|,
-name|RowCounter
-operator|.
-name|class
+name|getClass
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|c
@@ -566,10 +505,9 @@ operator|.
 name|toString
 argument_list|()
 argument_list|,
-name|this
+name|RowCounterMapper
 operator|.
-name|getClass
-argument_list|()
+name|class
 argument_list|,
 name|ImmutableBytesWritable
 operator|.
@@ -584,11 +522,9 @@ argument_list|)
 expr_stmt|;
 name|c
 operator|.
-name|setReducerClass
+name|setNumReduceTasks
 argument_list|(
-name|IdentityReducer
-operator|.
-name|class
+literal|0
 argument_list|)
 expr_stmt|;
 comment|// First arg is the output directory.
@@ -686,33 +622,6 @@ expr_stmt|;
 return|return
 literal|0
 return|;
-block|}
-specifier|public
-name|Configuration
-name|getConf
-parameter_list|()
-block|{
-return|return
-name|this
-operator|.
-name|conf
-return|;
-block|}
-specifier|public
-name|void
-name|setConf
-parameter_list|(
-specifier|final
-name|Configuration
-name|c
-parameter_list|)
-block|{
-name|this
-operator|.
-name|conf
-operator|=
-name|c
-expr_stmt|;
 block|}
 comment|/**    * @param args    * @throws Exception    */
 specifier|public
