@@ -151,6 +151,7 @@ Release 0.20.0 - Unreleased
    HBASE-1331  Lower the default scanner caching value
    HBASE-1235  Add table enabled status to shell and UI
                (Lars George via Stack)
+   HBASE-1333  RowCounter updates
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
